--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,6 @@ out/
 *.bak
 *.tmp
 
-# IntelliJ IDEA project files (specific)
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/usage.statistics.xml
-.idea/dictionaries/
-
 # Eclipse project files (if applicable)
 .project
 .classpath
@@ -78,18 +72,37 @@ yarn-error.log
 # Coverage reports
 /coverage/
 
+# macOS Finder metadata
+.DS_Store
+
+# Windows Installer files
+Thumbs.db
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
 # Jupyter Notebooks (optional if used)
 .ipynb_checkpoints/
 
 # Python Bytecode files (optional if you use Python in your project)
 __pycache__/
 *.py[cod]
-
-# macOS Finder metadata
-.DS_Store
-
-# Windows Installer files
-Thumbs.db
 
 # PyCharm specific files (optional)
 .idea/
