--- a/LandmineFlyWeb/webPart/package.json
+++ b/LandmineFlyWeb/webPart/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.7.14"
+    "vuetify": "^3.7.14",
+    "vuex": "^4.1.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
